@@ -54,5 +54,5 @@ lib/SatsukiApp/form_2.pm
 #--------------------------------------
 # Special Edition files
 #--------------------------------------
-
+theme/satsuki2-pop/iris/
 
