@@ -1,9 +1,8 @@
 <@40.is_function>
 <@local(h)>
 <$h = validator(begin_hash, argv#0) )>
-	title_none = flag
 	all = flag
-	br  = flag
+	button = flag
 <$end>
 
 <$ifbreak(form_error())>
