@@ -9,9 +9,11 @@
 --nginxに正式対応しました。((以前のものでも設定次第では動きます))
 --ページキッシュ機能を実装しました。
 --jQuery 3にアップデート。
+--jQuery UIをアップデート。
 -_top.htmlのサイドバーが反映されなかったのを修正し、その他更新しました。
 -月別の記事一覧も、ブログ設定のコンテンツ分離を参照するようにしました。
 -【plugin】プラグインイベントに #before/#after 修飾が追加されました。
+-【plugin】ヘッダ検索ボックスを簡素にしました。
 -【テーマ】cuteテーマでサイドバー要素をクリックできない。
 -【fix】MarkdownでGMF Code Syntax（```～```）中の記法がパースされていた。
 -【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
